add sql and API

--- a/6. Работа с данными/Запросы на выгрузку данных PostgreSQL.ipynb
+++ b/6. Работа с данными/Запросы на выгрузку данных PostgreSQL.ipynb
@@ -539,18 +539,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "       month  total_amount\n0    Февраль       3226.70\n1       Март       9880.21\n2  Остальные      12011.98",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>month</th>\n      <th>total_amount</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Февраль</td>\n      <td>3226.70</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Март</td>\n      <td>9880.21</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Остальные</td>\n      <td>12011.98</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Найти сумму выплат за февраль и март ДЛЯ КЛИЕНТОВ, у которых суммарная стоимость не превысит 10долларов.\n",
     "sql_query(\"\"\"\n",
@@ -570,74 +560,6 @@
     "GROUP BY month\n",
     "ORDER BY total_amount\n",
     "DESC\n",
-    "\"\"\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Подзапросы в FROM"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "     customer_id  store_id first_name  last_name  \\\n0            524         1      Jared        Ely   \n1              1         1       Mary      Smith   \n2              2         1   Patricia    Johnson   \n3              3         1      Linda   Williams   \n4              4         2    Barbara      Jones   \n..           ...       ...        ...        ...   \n594          595         1   Terrence  Gunderson   \n595          596         1    Enrique   Forsythe   \n596          597         1    Freddie     Duggan   \n597          598         1       Wade   Delvalle   \n598          599         2     Austin    Cintron   \n\n                                     email  address_id  activebool  \\\n0             jared.ely@sakilacustomer.org         530        True   \n1            mary.smith@sakilacustomer.org           5        True   \n2      patricia.johnson@sakilacustomer.org           6        True   \n3        linda.williams@sakilacustomer.org           7        True   \n4         barbara.jones@sakilacustomer.org           8        True   \n..                                     ...         ...         ...   \n594  terrence.gunderson@sakilacustomer.org         601        True   \n595    enrique.forsythe@sakilacustomer.org         602        True   \n596      freddie.duggan@sakilacustomer.org         603        True   \n597       wade.delvalle@sakilacustomer.org         604        True   \n598      austin.cintron@sakilacustomer.org         605        True   \n\n    create_date             last_update  active  \n0    2006-02-14 2013-05-26 14:49:45.738       1  \n1    2006-02-14 2013-05-26 14:49:45.738       1  \n2    2006-02-14 2013-05-26 14:49:45.738       1  \n3    2006-02-14 2013-05-26 14:49:45.738       1  \n4    2006-02-14 2013-05-26 14:49:45.738       1  \n..          ...                     ...     ...  \n594  2006-02-14 2013-05-26 14:49:45.738       1  \n595  2006-02-14 2013-05-26 14:49:45.738       1  \n596  2006-02-14 2013-05-26 14:49:45.738       1  \n597  2006-02-14 2013-05-26 14:49:45.738       1  \n598  2006-02-14 2013-05-26 14:49:45.738       1  \n\n[599 rows x 10 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>customer_id</th>\n      <th>store_id</th>\n      <th>first_name</th>\n      <th>last_name</th>\n      <th>email</th>\n      <th>address_id</th>\n      <th>activebool</th>\n      <th>create_date</th>\n      <th>last_update</th>\n      <th>active</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>524</td>\n      <td>1</td>\n      <td>Jared</td>\n      <td>Ely</td>\n      <td>jared.ely@sakilacustomer.org</td>\n      <td>530</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>1</td>\n      <td>Mary</td>\n      <td>Smith</td>\n      <td>mary.smith@sakilacustomer.org</td>\n      <td>5</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>1</td>\n      <td>Patricia</td>\n      <td>Johnson</td>\n      <td>patricia.johnson@sakilacustomer.org</td>\n      <td>6</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>1</td>\n      <td>Linda</td>\n      <td>Williams</td>\n      <td>linda.williams@sakilacustomer.org</td>\n      <td>7</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>2</td>\n      <td>Barbara</td>\n      <td>Jones</td>\n      <td>barbara.jones@sakilacustomer.org</td>\n      <td>8</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>594</th>\n      <td>595</td>\n      <td>1</td>\n      <td>Terrence</td>\n      <td>Gunderson</td>\n      <td>terrence.gunderson@sakilacustomer.org</td>\n      <td>601</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>595</th>\n      <td>596</td>\n      <td>1</td>\n      <td>Enrique</td>\n      <td>Forsythe</td>\n      <td>enrique.forsythe@sakilacustomer.org</td>\n      <td>602</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>596</th>\n      <td>597</td>\n      <td>1</td>\n      <td>Freddie</td>\n      <td>Duggan</td>\n      <td>freddie.duggan@sakilacustomer.org</td>\n      <td>603</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>597</th>\n      <td>598</td>\n      <td>1</td>\n      <td>Wade</td>\n      <td>Delvalle</td>\n      <td>wade.delvalle@sakilacustomer.org</td>\n      <td>604</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>598</th>\n      <td>599</td>\n      <td>2</td>\n      <td>Austin</td>\n      <td>Cintron</td>\n      <td>austin.cintron@sakilacustomer.org</td>\n      <td>605</td>\n      <td>True</td>\n      <td>2006-02-14</td>\n      <td>2013-05-26 14:49:45.738</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>599 rows × 10 columns</p>\n</div>"
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sql_query(\"\"\"\n",
-    "SELECT * FROM\n",
-    "customer\n",
-    "\"\"\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Подзапросы в SELECT"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "sql_query(\"\"\"\n",
-    "SELECT col1, col2,\n",
-    "SELECT()\n",
     "\"\"\")"
    ],
    "metadata": {
@@ -723,8 +645,123 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Оконные функции"
+    "## Оконные функции\n",
+    "\n",
+    "Оконные функции используют для добавления к нашему запросу прочих агрегаций, которые не вошли в\n",
+    "GROUP BY. Сразу отметим, что оконные функции используют данные из РЕЗУЛЬТИРУЮЩЕГО датасета, а не из\n",
+    "самой базы."
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "     customer_id  total_amount  amount_rank\n0            148        211.55            1\n1            526        208.58            2\n2            178        194.61            3\n3            137        191.62            4\n4            144        189.60            5\n..           ...           ...          ...\n594          110         49.88          595\n595          320         47.85          596\n596          248         37.87          597\n597          281         32.90          598\n598          318         27.93          599\n\n[599 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>customer_id</th>\n      <th>total_amount</th>\n      <th>amount_rank</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>148</td>\n      <td>211.55</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>526</td>\n      <td>208.58</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>178</td>\n      <td>194.61</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>137</td>\n      <td>191.62</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>144</td>\n      <td>189.60</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>594</th>\n      <td>110</td>\n      <td>49.88</td>\n      <td>595</td>\n    </tr>\n    <tr>\n      <th>595</th>\n      <td>320</td>\n      <td>47.85</td>\n      <td>596</td>\n    </tr>\n    <tr>\n      <th>596</th>\n      <td>248</td>\n      <td>37.87</td>\n      <td>597</td>\n    </tr>\n    <tr>\n      <th>597</th>\n      <td>281</td>\n      <td>32.90</td>\n      <td>598</td>\n    </tr>\n    <tr>\n      <th>598</th>\n      <td>318</td>\n      <td>27.93</td>\n      <td>599</td>\n    </tr>\n  </tbody>\n</table>\n<p>599 rows × 3 columns</p>\n</div>"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Выведем лучших клиентов по рейтингу\n",
+    "sql_query(\"\"\"\n",
+    "SELECT customer_id, SUM(amount) as total_amount,\n",
+    "RANK() OVER(ORDER BY SUM(amount) DESC) as amount_rank\n",
+    "FROM payment\n",
+    "GROUP BY customer_id\n",
+    "\"\"\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "     customer_id  total_amount  total_amount_money\n0            184         80.80            61312.04\n1             87        137.72            61312.04\n2            477        106.79            61312.04\n3            273        130.72            61312.04\n4            550        151.69            61312.04\n..           ...           ...                 ...\n594          449         80.83            61312.04\n595           64         91.70            61312.04\n596          520        127.69            61312.04\n597           55         84.81            61312.04\n598          148        211.55            61312.04\n\n[599 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>customer_id</th>\n      <th>total_amount</th>\n      <th>total_amount_money</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>184</td>\n      <td>80.80</td>\n      <td>61312.04</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>87</td>\n      <td>137.72</td>\n      <td>61312.04</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>477</td>\n      <td>106.79</td>\n      <td>61312.04</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>273</td>\n      <td>130.72</td>\n      <td>61312.04</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>550</td>\n      <td>151.69</td>\n      <td>61312.04</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>594</th>\n      <td>449</td>\n      <td>80.83</td>\n      <td>61312.04</td>\n    </tr>\n    <tr>\n      <th>595</th>\n      <td>64</td>\n      <td>91.70</td>\n      <td>61312.04</td>\n    </tr>\n    <tr>\n      <th>596</th>\n      <td>520</td>\n      <td>127.69</td>\n      <td>61312.04</td>\n    </tr>\n    <tr>\n      <th>597</th>\n      <td>55</td>\n      <td>84.81</td>\n      <td>61312.04</td>\n    </tr>\n    <tr>\n      <th>598</th>\n      <td>148</td>\n      <td>211.55</td>\n      <td>61312.04</td>\n    </tr>\n  </tbody>\n</table>\n<p>599 rows × 3 columns</p>\n</div>"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Добавим суммарную выручку за все время\n",
+    "sql_query(\"\"\"\n",
+    "SELECT customer_id, SUM(amount) as total_amount,\n",
+    "SUM(SUM(amount)) OVER() as total_amount_money\n",
+    "FROM payment\n",
+    "GROUP BY customer_id\n",
+    "\"\"\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       customer_id country         city  amount  total_city_country\n0              148  Runion  Saint-Denis    6.99              211.55\n1              148  Runion  Saint-Denis    4.99              211.55\n2              148  Runion  Saint-Denis    4.99              211.55\n3              148  Runion  Saint-Denis    0.99              211.55\n4              148  Runion  Saint-Denis   10.99              211.55\n...            ...     ...          ...     ...                 ...\n14591          318  Poland    Bydgoszcz    5.99               27.93\n14592          318  Poland    Bydgoszcz    2.99               27.93\n14593          318  Poland    Bydgoszcz    2.99               27.93\n14594          318  Poland    Bydgoszcz    4.99               27.93\n14595          318  Poland    Bydgoszcz    8.99               27.93\n\n[14596 rows x 5 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>customer_id</th>\n      <th>country</th>\n      <th>city</th>\n      <th>amount</th>\n      <th>total_city_country</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>148</td>\n      <td>Runion</td>\n      <td>Saint-Denis</td>\n      <td>6.99</td>\n      <td>211.55</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>148</td>\n      <td>Runion</td>\n      <td>Saint-Denis</td>\n      <td>4.99</td>\n      <td>211.55</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>148</td>\n      <td>Runion</td>\n      <td>Saint-Denis</td>\n      <td>4.99</td>\n      <td>211.55</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>148</td>\n      <td>Runion</td>\n      <td>Saint-Denis</td>\n      <td>0.99</td>\n      <td>211.55</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>148</td>\n      <td>Runion</td>\n      <td>Saint-Denis</td>\n      <td>10.99</td>\n      <td>211.55</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>14591</th>\n      <td>318</td>\n      <td>Poland</td>\n      <td>Bydgoszcz</td>\n      <td>5.99</td>\n      <td>27.93</td>\n    </tr>\n    <tr>\n      <th>14592</th>\n      <td>318</td>\n      <td>Poland</td>\n      <td>Bydgoszcz</td>\n      <td>2.99</td>\n      <td>27.93</td>\n    </tr>\n    <tr>\n      <th>14593</th>\n      <td>318</td>\n      <td>Poland</td>\n      <td>Bydgoszcz</td>\n      <td>2.99</td>\n      <td>27.93</td>\n    </tr>\n    <tr>\n      <th>14594</th>\n      <td>318</td>\n      <td>Poland</td>\n      <td>Bydgoszcz</td>\n      <td>4.99</td>\n      <td>27.93</td>\n    </tr>\n    <tr>\n      <th>14595</th>\n      <td>318</td>\n      <td>Poland</td>\n      <td>Bydgoszcz</td>\n      <td>8.99</td>\n      <td>27.93</td>\n    </tr>\n  </tbody>\n</table>\n<p>14596 rows × 5 columns</p>\n</div>"
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Посмотреть на суммарную выручку по клиентам в разрезе городов и стран\n",
+    "# Добавляем Partition\n",
+    "sql_query(\"\"\"\n",
+    "SELECT cust.customer_id, country.country, city.city, amount,\n",
+    "SUM(pay.amount) OVER(PARTITION BY country.country,city.city) as total_city_country\n",
+    "FROM customer cust\n",
+    "LEFT JOIN payment pay\n",
+    "ON cust.customer_id = pay.customer_id\n",
+    "LEFT JOIN address addr\n",
+    "ON addr.address_id = cust.address_id\n",
+    "LEFT JOIN city\n",
+    "ON addr.city_id = city.city_id\n",
+    "LEFT JOIN country\n",
+    "ON city.country_id = country.country_id\n",
+    "ORDER BY total_city_country\n",
+    "DESC\n",
+    "\"\"\"\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -741,18 +778,6 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Функции"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
     }
    }
   }
