--- a/7. FastAPI/Лекция 7. FastAPI.ipynb
+++ b/7. FastAPI/Лекция 7. FastAPI.ipynb
@@ -23,7 +23,8 @@
    "source": [
     "# Преимущества FastAPI\n",
     "\n",
-    "\n"
+    "1. В отличие от Django и Flask является АССИНХРОННЫМ! Ассинхронность обсуждалась в 4 разделе.\n",
+    "2.\n"
    ]
   },
   {
@@ -41,12 +42,24 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Создание сайта"
+    "# Создание сайта при помощи bootstrap"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
