--- a/7. FastAPI/Лекция 7. FastAPI.ipynb
+++ b/7. FastAPI/Лекция 7. FastAPI.ipynb
@@ -1189,6 +1189,187 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Работа с данными в FastAPI: ORM и Pydantic\n",
+    "\n",
+    "Любой веб-сервис должен обязательно хранить, обрабатывать и выдавать данные. В средах разработки популярным подходом к работе с OLTP (транзакционными базами данных) является ORM (object-relational mapping), где каждая таблица представляется через свой класс в Python.\n",
+    "Ниже рассмотрим примеры того, как это можно реализовать в fastAPI."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "from sqlalchemy.orm import sessionmaker\n",
+    "from sqlalchemy import Boolean, Column, ForeignKey, Integer, String\n",
+    "from sqlalchemy.orm import relationship\n",
+    "SQLALCHEMY_DATABASE_URL = \"postgresql://postgres:postgres@localhost:5432/fastapi\"\n",
+    "engine = create_engine(\n",
+    "    SQLALCHEMY_DATABASE_URL, connect_args={\"check_same_thread\": False}\n",
+    ")\n",
+    "\n",
+    "# Создаем сессию работы с нашей базой\n",
+    "SessionLocal = sessionmaker(autocommit=False, autoflush=False, bind=engine)\n",
+    "\n",
+    "# Создаем таблицу через ORM\n",
+    "Base = declarative_base()\n",
+    "\n",
+    "class User(Base):\n",
+    "    __tablename__ = \"users\"\n",
+    "    id = Column(Integer, primary_key=True, index=True)\n",
+    "    email = Column(String, unique=True, index=True)\n",
+    "    hashed_password = Column(String)\n",
+    "    is_active = Column(Boolean, default=True)\n",
+    "\n",
+    "    items = relationship(\"Item\", back_populates=\"owner\")\n",
+    "\n",
+    "class Item(Base):\n",
+    "    __tablename__ = \"items\"\n",
+    "\n",
+    "    id = Column(Integer, primary_key=True, index=True)\n",
+    "    title = Column(String, index=True)\n",
+    "    description = Column(String, index=True)\n",
+    "    owner_id = Column(Integer, ForeignKey(\"users.id\"))\n",
+    "\n",
+    "    owner = relationship(\"User\", back_populates=\"items\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "# Pydantic\n",
+    "from typing import List, Optional\n",
+    "from pydantic import BaseModel\n",
+    "\n",
+    "class ItemBase(BaseModel):\n",
+    "    title: str\n",
+    "    description: Optional[str] = None\n",
+    "\n",
+    "\n",
+    "class ItemCreate(ItemBase):\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "class Item(ItemBase):\n",
+    "    id: int\n",
+    "    owner_id: int\n",
+    "\n",
+    "    class Config:\n",
+    "        orm_mode = True\n",
+    "\n",
+    "\n",
+    "class UserBase(BaseModel):\n",
+    "    email: str\n",
+    "\n",
+    "\n",
+    "class UserCreate(UserBase):\n",
+    "    password: str\n",
+    "\n",
+    "\n",
+    "class User(UserBase):\n",
+    "    id: int\n",
+    "    is_active: bool\n",
+    "    items: List[Item] = []\n",
+    "\n",
+    "    class Config:\n",
+    "        orm_mode = True"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## CRUD: create, read, update, delete"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "from sqlalchemy.orm import Session\n",
+    "\n",
+    "def get_user(db: Session, user_id: int):\n",
+    "    return db.query(User).filter(User.id == user_id).first()\n",
+    "\n",
+    "\n",
+    "def get_user_by_email(db: Session, email: str):\n",
+    "    return db.query(User).filter(User.email == email).first()\n",
+    "\n",
+    "\n",
+    "def get_users(db: Session, skip: int = 0, limit: int = 100):\n",
+    "    return db.query(User).offset(skip).limit(limit).all()\n",
+    "\n",
+    "\n",
+    "def create_user(db: Session, user: UserCreate):\n",
+    "    fake_hashed_password = user.password + \"notreallyhashed\"\n",
+    "    db_user = User(email=user.email, hashed_password=fake_hashed_password)\n",
+    "    db.add(db_user)\n",
+    "    db.commit()\n",
+    "    db.refresh(db_user)\n",
+    "    return db_user\n",
+    "\n",
+    "\n",
+    "def get_items(db: Session, skip: int = 0, limit: int = 100):\n",
+    "    return db.query(Item).offset(skip).limit(limit).all()\n",
+    "\n",
+    "\n",
+    "def create_user_item(db: Session, item: ItemCreate, user_id: int):\n",
+    "    db_item = Item(**item.dict(), owner_id=user_id)\n",
+    "    db.add(db_item)\n",
+    "    db.commit()\n",
+    "    db.refresh(db_item)\n",
+    "    return db_item"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
