--- a/6. Работа с данными/Запросы на выгрузку данных PostgreSQL.ipynb
+++ b/6. Работа с данными/Запросы на выгрузку данных PostgreSQL.ipynb
@@ -5,6 +5,8 @@
    "source": [
     "https://nuitrcs.github.io/databases_workshop/ - хороший гайд по базовому SQL\n",
     "\n",
+    "\n",
+    "https://pgexercises.com/ - лучший тренажер по SQL", 
     "https://mockaroo.com/ - генерация любых небольших датасетов\n",
     "\n",
     "Holywell's SQL Style Guide - https://www.sqlstyle.guide/ru/"
